--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@
   line-height: 1.5;
   font-weight: 400; */
 
-  color-scheme: light dark;
+  /* color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -33,9 +33,11 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  /* place-items: center; */
+  /* min-width: 100vw;
+  min-height: 100vh; */
 }
 
 h1 {
