--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=RocknRoll+One&family=Zen+Kurenaido&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: "Zen Kurenaido", serif;
+  /* font-family: "Zen Kurenaido", serif; */
+  font-family: "RocknRoll One", serif;
   font-weight: 400;
   font-style: normal;
   /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
