--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,11 @@
 .read-the-docs {
   color: #888;
 }
+
+.custom-datepicker {
+  min-width: 250px;
+  border-width: 1px;
+  border-color: gray;
+  border-radius: 8px;
+  padding: 6px;
+}
