--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ body {
   display: flex;
   width: 100vw;
   height: 100vh;
+  background-color: ;
   /* place-items: center; */
   /* min-width: 100vw;
   min-height: 100vh; */
