--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,27 @@
   border-radius: 8px;
   padding: 6px;
 }
+
+.modalContainer {
+  display: flex;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+}
+
+.modalContent {
+  display: flex;
+  position: relative;
+  max-width: 60rem;
+  background-color: #f8fdcf;
+  max-height: 40rem;
+  flex-direction: column;
+  padding: 2rem;
+  border-radius: 0.5rem;
+}
